--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
 *.class
 
+#netbeans ignore personal stuff
+nbproject/
+
+##generic files to ignore
+*~
+*.locks
+*.DS_Store
+*.swp
+*.out
+
 # Package Files #
 *.jar
 *.war
